// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`load, track, validate - validationOptions={errorOnInvalid: true} 1`] = `
Array [
  Array [
    "CustomPlugin: ",
    "load() environment='production' disabled=undefined plugins=[schema-validator, custom] context={\\"requiredString\\":\\"is required\\",\\"optionalEnum\\":\\"Value 1\\"} validation={\\"disabled\\":false,\\"trackInvalid\\":false,\\"errorOnInvalid\\":true}",
  ],
  Array [
    "CustomPlugin: ",
    "identify() userId='undefined' properties={\\"requiredNumber\\":42}",
  ],
  Array [
    "CustomPlugin: ",
    "identify() userId='temp-user-id' properties={\\"requiredNumber\\":42}",
  ],
  Array [
    "Caught validation error.",
    "Validation Error: Passed in identify properties did not validate against your tracking plan. \`properties\` should have required property 'requiredNumber'.",
  ],
  Array [
    "Caught validation error.",
    "Validation Error: Passed in identify properties did not validate against your tracking plan. \`properties\` should NOT have additional properties (badProp).",
  ],
  Array [
    "CustomPlugin: ",
    "alias() userId='test-user-id' previousId='undefined'",
  ],
  Array [
    "CustomPlugin: ",
    "alias() userId='test-user-id' previousId='temp-user-id'",
  ],
  Array [
    "Caught validation error.",
    "Validation Error: Passed in group properties did not validate against your tracking plan. \`properties\` should have required property 'requiredBoolean'.",
  ],
  Array [
    "CustomPlugin: ",
    "group() userId='test-user-id' groupId='test-group-id' properties={\\"requiredBoolean\\":true}",
  ],
  Array [
    "CustomPlugin: ",
    "page() userId='test-user-id' category='page category 1' name='page name 1' properties=undefined",
  ],
  Array [
    "Caught validation error.",
    "Validation Error: 'page' schema is empty but properties were found. properties={\\"pageProp\\":\\"a page property\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "track() userId='test-user-id' event='Event No Properties' properties={\\"requiredString\\":\\"is required\\",\\"optionalEnum\\":\\"Value 1\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "track() userId='test-user-id' event='Event With All Properties' properties={\\"requiredString\\":\\"A required string\\",\\"optionalEnum\\":\\"Value 1\\",\\"requiredNumber\\":2,\\"requiredInteger\\":42,\\"requiredEnum\\":\\"Enum1\\",\\"requiredBoolean\\":false,\\"requiredConst\\":\\"some-const-value\\",\\"requiredArray\\":[\\"required\\",\\"array\\"],\\"optionalString\\":\\"I'm optional!\\"}",
  ],
  Array [
    "Caught validation error.",
    "Validation Error: Passed in EventMaxIntForTest properties did not validate against your tracking plan. \`properties.intMax10\` should be <= 10.",
  ],
]
`;

exports[`load, track, validate - validationOptions={trackInvalid: true} 1`] = `
Array [
  Array [
    "CustomPlugin: ",
    "load() environment='production' disabled=undefined plugins=[schema-validator, custom] context={\\"requiredString\\":\\"is required\\",\\"optionalEnum\\":\\"Value 1\\"} validation={\\"disabled\\":false,\\"trackInvalid\\":true,\\"errorOnInvalid\\":false}",
  ],
  Array [
    "CustomPlugin: ",
    "identify() userId='undefined' properties={\\"requiredNumber\\":42}",
  ],
  Array [
    "CustomPlugin: ",
    "identify() userId='temp-user-id' properties={\\"requiredNumber\\":42}",
  ],
  Array [
    "CustomPlugin: ",
    "identify() userId='temp-user-id' properties=undefined",
  ],
  Array [
    "CustomPlugin: ",
    "identify() userId='temp-user-id' properties={\\"badProp\\":\\"unsupported property\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "alias() userId='test-user-id' previousId='undefined'",
  ],
  Array [
    "CustomPlugin: ",
    "alias() userId='test-user-id' previousId='temp-user-id'",
  ],
  Array [
    "CustomPlugin: ",
    "group() userId='test-user-id' groupId='test-group-id' properties=undefined",
  ],
  Array [
    "CustomPlugin: ",
    "group() userId='test-user-id' groupId='test-group-id' properties={\\"requiredBoolean\\":true}",
  ],
  Array [
    "CustomPlugin: ",
    "page() userId='test-user-id' category='page category 1' name='page name 1' properties=undefined",
  ],
  Array [
    "CustomPlugin: ",
    "page() userId='test-user-id' category='page category 2' name='page name 2' properties={\\"pageProp\\":\\"a page property\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "track() userId='test-user-id' event='Event No Properties' properties={\\"requiredString\\":\\"is required\\",\\"optionalEnum\\":\\"Value 1\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "track() userId='test-user-id' event='Event With All Properties' properties={\\"requiredString\\":\\"A required string\\",\\"optionalEnum\\":\\"Value 1\\",\\"requiredNumber\\":2,\\"requiredInteger\\":42,\\"requiredEnum\\":\\"Enum1\\",\\"requiredBoolean\\":false,\\"requiredConst\\":\\"some-const-value\\",\\"requiredArray\\":[\\"required\\",\\"array\\"],\\"optionalString\\":\\"I'm optional!\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "track() userId='test-user-id' event='EventMaxIntForTest' properties={\\"requiredString\\":\\"is required\\",\\"optionalEnum\\":\\"Value 1\\",\\"intMax10\\":20}",
  ],
]
`;

exports[`load, track, validate - validationOptions=DEFAULT 1`] = `
Array [
  Array [
    "CustomPlugin: ",
    "load() environment='production' disabled=undefined plugins=[schema-validator, custom] context={\\"requiredString\\":\\"is required\\",\\"optionalEnum\\":\\"Value 1\\"} validation=undefined",
  ],
  Array [
    "CustomPlugin: ",
    "identify() userId='undefined' properties={\\"requiredNumber\\":42}",
  ],
  Array [
    "CustomPlugin: ",
    "identify() userId='temp-user-id' properties={\\"requiredNumber\\":42}",
  ],
  Array [
    "CustomPlugin: ",
    "identify() userId='temp-user-id' properties=undefined",
  ],
  Array [
    "CustomPlugin: ",
    "identify() userId='temp-user-id' properties={\\"badProp\\":\\"unsupported property\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "alias() userId='test-user-id' previousId='undefined'",
  ],
  Array [
    "CustomPlugin: ",
    "alias() userId='test-user-id' previousId='temp-user-id'",
  ],
  Array [
    "CustomPlugin: ",
    "group() userId='test-user-id' groupId='test-group-id' properties=undefined",
  ],
  Array [
    "CustomPlugin: ",
    "group() userId='test-user-id' groupId='test-group-id' properties={\\"requiredBoolean\\":true}",
  ],
  Array [
    "CustomPlugin: ",
    "page() userId='test-user-id' category='page category 1' name='page name 1' properties=undefined",
  ],
  Array [
    "CustomPlugin: ",
    "page() userId='test-user-id' category='page category 2' name='page name 2' properties={\\"pageProp\\":\\"a page property\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "track() userId='test-user-id' event='Event No Properties' properties={\\"requiredString\\":\\"is required\\",\\"optionalEnum\\":\\"Value 1\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "track() userId='test-user-id' event='Event With All Properties' properties={\\"requiredString\\":\\"A required string\\",\\"optionalEnum\\":\\"Value 1\\",\\"requiredNumber\\":2,\\"requiredInteger\\":42,\\"requiredEnum\\":\\"Enum1\\",\\"requiredBoolean\\":false,\\"requiredConst\\":\\"some-const-value\\",\\"requiredArray\\":[\\"required\\",\\"array\\"],\\"optionalString\\":\\"I'm optional!\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "track() userId='test-user-id' event='EventMaxIntForTest' properties={\\"requiredString\\":\\"is required\\",\\"optionalEnum\\":\\"Value 1\\",\\"intMax10\\":20}",
  ],
]
`;

exports[`load, track, validate w/ context='{}' 1`] = `
Array [
  Array [
    "CustomPlugin: ",
    "load() environment='production' disabled=undefined plugins=[schema-validator, custom] context={} validation=undefined",
  ],
  Array [
    "CustomPlugin: ",
    "identify() userId='undefined' properties={\\"requiredNumber\\":42}",
  ],
  Array [
    "CustomPlugin: ",
    "identify() userId='temp-user-id' properties={\\"requiredNumber\\":42}",
  ],
  Array [
    "CustomPlugin: ",
    "identify() userId='temp-user-id' properties=undefined",
  ],
  Array [
    "CustomPlugin: ",
    "identify() userId='temp-user-id' properties={\\"badProp\\":\\"unsupported property\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "alias() userId='test-user-id' previousId='undefined'",
  ],
  Array [
    "CustomPlugin: ",
    "alias() userId='test-user-id' previousId='temp-user-id'",
  ],
  Array [
    "CustomPlugin: ",
    "group() userId='test-user-id' groupId='test-group-id' properties=undefined",
  ],
  Array [
    "CustomPlugin: ",
    "group() userId='test-user-id' groupId='test-group-id' properties={\\"requiredBoolean\\":true}",
  ],
  Array [
    "CustomPlugin: ",
    "page() userId='test-user-id' category='page category 1' name='page name 1' properties=undefined",
  ],
  Array [
    "CustomPlugin: ",
    "page() userId='test-user-id' category='page category 2' name='page name 2' properties={\\"pageProp\\":\\"a page property\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "track() userId='test-user-id' event='Event No Properties' properties={}",
  ],
  Array [
    "CustomPlugin: ",
    "track() userId='test-user-id' event='Event With All Properties' properties={\\"requiredString\\":\\"A required string\\",\\"requiredNumber\\":2,\\"requiredInteger\\":42,\\"requiredEnum\\":\\"Enum1\\",\\"requiredBoolean\\":false,\\"requiredConst\\":\\"some-const-value\\",\\"requiredArray\\":[\\"required\\",\\"array\\"],\\"optionalString\\":\\"I'm optional!\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "track() userId='test-user-id' event='EventMaxIntForTest' properties={\\"intMax10\\":20}",
  ],
]
`;

exports[`load, track, validate w/ context='undefined' 1`] = `
Array [
  Array [
    "CustomPlugin: ",
    "load() environment='production' disabled=undefined plugins=[schema-validator, custom] context=undefined validation=undefined",
  ],
  Array [
    "CustomPlugin: ",
    "identify() userId='undefined' properties={\\"requiredNumber\\":42}",
  ],
  Array [
    "CustomPlugin: ",
    "identify() userId='temp-user-id' properties={\\"requiredNumber\\":42}",
  ],
  Array [
    "CustomPlugin: ",
    "identify() userId='temp-user-id' properties=undefined",
  ],
  Array [
    "CustomPlugin: ",
    "identify() userId='temp-user-id' properties={\\"badProp\\":\\"unsupported property\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "alias() userId='test-user-id' previousId='undefined'",
  ],
  Array [
    "CustomPlugin: ",
    "alias() userId='test-user-id' previousId='temp-user-id'",
  ],
  Array [
    "CustomPlugin: ",
    "group() userId='test-user-id' groupId='test-group-id' properties=undefined",
  ],
  Array [
    "CustomPlugin: ",
    "group() userId='test-user-id' groupId='test-group-id' properties={\\"requiredBoolean\\":true}",
  ],
  Array [
    "CustomPlugin: ",
    "page() userId='test-user-id' category='page category 1' name='page name 1' properties=undefined",
  ],
  Array [
    "CustomPlugin: ",
    "page() userId='test-user-id' category='page category 2' name='page name 2' properties={\\"pageProp\\":\\"a page property\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "track() userId='test-user-id' event='Event No Properties' properties={}",
  ],
  Array [
    "CustomPlugin: ",
    "track() userId='test-user-id' event='Event With All Properties' properties={\\"requiredString\\":\\"A required string\\",\\"requiredNumber\\":2,\\"requiredInteger\\":42,\\"requiredEnum\\":\\"Enum1\\",\\"requiredBoolean\\":false,\\"requiredConst\\":\\"some-const-value\\",\\"requiredArray\\":[\\"required\\",\\"array\\"],\\"optionalString\\":\\"I'm optional!\\"}",
  ],
  Array [
    "CustomPlugin: ",
    "track() userId='test-user-id' event='EventMaxIntForTest' properties={\\"intMax10\\":20}",
  ],
]
`;
